--- a/spring-web-jpa-starter/src/main/resources/application.properties
+++ b/spring-web-jpa-starter/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 logging.level.org.springframework=info
 management.endpoints.web.exposure.include=*
 springdoc.swagger-ui.path=/swagger-ui.html
+spring.datasource.url = jdbc:h2:mem:testDB
+spring.h2.console.enabled=true
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.show-sql=true
+spring.profiles.active=prod
+
+spring.security.user.name=username
+spring.security.user.password=password
