--- a/spring-web-jpa-starter/src/main/resources/application.properties
+++ b/spring-web-jpa-starter/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.application.name=spring-web-jpa-starter
 logging.level.org.springframework=info
 management.endpoints.web.exposure.include=*
 springdoc.swagger-ui.path=/swagger-ui.html
@@ -5,7 +6,4 @@ spring.datasource.url = jdbc:h2:mem:testDB
 spring.h2.console.enabled=true
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
-spring.profiles.active=prod
-
-spring.security.user.name=username
-spring.security.user.password=password
+#spring.profiles.active=prod
